# Complete_Agentic_AI

./: .gitignore  README.md  demo.txt
AGENTIC_AI/: .python-version  HELP_GUIDE.md  ollama_setup.md  pyproject.toml  requirements.txt  venv_help.md
AGENTIC_AI/LANGRAPH/: 1-basic_chatbot.ipynb  2-HumanAssistance.ipynb
AGENTIC_AI/MCP_server_Langchain/: client.py
AGENTIC_AI/RAG/: document.ipynb  pdf_loader.ipynb
AGENTIC_AI/data/text_files/: machine_learning.txt
AGENTIC_AI/updated_langchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb  6-middleware_ollama.ipynb  langchain_guardrails_crash_course.ipynb  langchain_guardrails_ollama.ipynb  langchain_ollama.ipynb  try_api_key.py
